--- a/index.html
+++ b/index.html
@@ -41,23 +41,23 @@
             <h2 data-anime="left">/Ferramentas & Serviços</h2>
             <div class="card__container my-slider-2">
                 <div class="card" data-anime="bottom"> 
-                    <h3 class="card__title">SEO</h3>  
+                    <h3 class="card__title">Sites modernos</h3>  
                     <ul class="card__list">
-                        <li class="card__description">Google Analytics</li> 
-                        <li class="card__description">Google Search Console</li> 
-                        <li class="card__description">KingHost</li> 
-                        <li class="card__description">Keyword Explorer</li> 
-                        <li class="card__description">WooRank</li> 
+                        <li class="card__description">Alta performance</li> 
+                        <li class="card__description">Design moderno</li> 
+                        <li class="card__description">Acessibilidade</li> 
+                        <li class="card__description">Seo avançado</li> 
+                        <li class="card__description">Interatividade</li> 
                     </ul>         
                 </div>
                 <div class="card card--middle" data-anime="bottom">
                     <h3 class="card__title">Tecnologias</h3>   
                     <ul class="card__list">
                         <li class="card__description">Html & CSS</li> 
+                        <li class="card__description">Javascript</li>
                         <li class="card__description">SASS & SCSS</li> 
                         <li class="card__description">Bootstrap</li> 
                         <li class="card__description">Materialize</li> 
-                        <li class="card__description">Javascript</li>
                         <li class="card__description">Jquery</li>  
                         <li class="card__description">Wordpress</li> 
                     </ul>     
@@ -80,8 +80,8 @@
         <div class="container spacing-wrapper">
             <h2 class="about__title" data-anime="left">/Sobre</h2>
             <img src="/assets/images/eu.webp" alt="" class="about__img" data-anime="left">
-            <p class="about__paragraph" data-anime="bottom">Estava no último ano do ensino médio quando percebi meu amor por programação e códigos. Após concluir o ensino básico, ingressei na faculdade de Ensino superior Estácio, onde curso atualmente Análise e Desenvolvimento de Sistemas(2° Periodo).</p>
-            <p class="about__paragraph" data-anime="bottom">Atravessando lógica de programação e diversos cursos, amei o Front-End e decidi que daria meu melhor para sempre fazer um ótimo trabalho.</p>
+            <p class="about__paragraph" data-anime="bottom">Me chamo Fernando Chaves, tenho 20 Anos, trabalho com criação de sites profissionais desde 2018, sou estudante de Análise e Desenvolvimento de Sistemas e apaixonado por programação voltada a web.</p>
+            <p class="about__paragraph" data-anime="bottom">Tenho experiência com o mais variado tipo de website, desde sites profissionais até sites mais casuais, já criei e fiz a manutenção de diversos sites. Com foco em gerar imersão e transparência para seus clientes, meus websites são compátiveis com todos dispositivos, com rápido tempo de carregamento e de fácil manutenção.</p>
             <hr class="about__hr" data-anime="top">
         </div>
         </section>
@@ -121,7 +121,7 @@
                 <p class="contact__subtitle contact__subtitle--1">Não perca tempo, entre em contato comigo e faça um orçamento hoje mesmo.</p><br>
                 <a href="" class="contact__subtitle"><i class="far fa-envelope contact__icon"></i> fernando.chaves16@hotmail.com</a><br>  
                 <a href="https://www.instagram.com/fernandochavesfc/" class="contact__subtitle"> <i class="fab fa-instagram contact__icon" ></i> Instagram - @fernandochavesfc</a><br> 
-                <a href="https://www.instagram.com/fernandochavesfc/" class="contact__subtitle"> <i class="fab fa-linkedin contact__icon" ></i> Linkedin - fernandochavesfc</a><br>  
+                <a href="https://www.linkedin.com/in/fernandochavesfc/" class="contact__subtitle"> <i class="fab fa-linkedin contact__icon" ></i> Linkedin - fernandochavesfc</a><br>  
                 <a href="https://api.whatsapp.com/send?phone=5551998857983&text=Ol%C3%A1%20Fernando,%20gostei%20muito%20do%20seu%20servi%C3%A7o%20e%20gostaria%20de%20contrat%C3%A1-lo." class="contact__subtitle"><i class="fab fa-whatsapp contact__icon"></i> Whatsapp - (51)99885-7983 </a><br>
                 <a href="https://github.com/devsfe" class="contact__subtitle"> <i class="fab fa-github contact__icon" ></i> Github - devsfe</a>
             </div>           
