--- a/index.html
+++ b/index.html
@@ -91,6 +91,11 @@
             <h2 data-anime="left">/Portfólio</h2>
             <div class="portfolio__images my-slider">
                 <div class="img__container">
+                    <img src="assets/images/fortune.png" alt="" class="img"> 
+                    <h3 class="img__title">Imobiliária Fortune</h3>
+                    <p class="img__description">E-commerce fictícia focada no ramo de roupas. <br><a href="https://fortune-imobiliaria.netlify.app/" class="img__btn">Acessar Site</a></p>
+                </div>
+                <div class="img__container">
                     <img src="assets/images/express-shop.webp" alt="" class="img"> 
                     <h3 class="img__title">Express Shop</h3>
                     <p class="img__description">E-commerce fictícia focada no ramo de roupas. <br><a href="https://expresshop.netlify.app/" class="img__btn">Acessar Site</a></p>
@@ -104,12 +109,7 @@
                     <img src="assets/images/next-bar.webp" alt="" class="img"> 
                     <h3 class="img__title">Next Bar</h3>
                     <p class="img__description">Site com a temática bar, construido usando apenas Html, CSS & Figma. <br><a href="https://nextbar.netlify.app/" class="img__btn">Acessar Site</a></p>
-                </div>    
-                <div class="img__container">
-                    <img src="assets/images/soul.webp" alt="" class="img">
-                    <h3 class="img__title">Soul</h3>
-                    <p class="img__description">Landing page fictícia de uma empresa focada em soluções tecnológicas. <br><a href="https://soulwebsite.netlify.app/" class="img__btn">Acessar Site</a></p>
-                </div>           
+                </div>              
             </div>
         </div>  
     </section>  
