Atualizaçao descriçao sites

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <div class="img__container">
                     <img src="assets/images/fortune.png" alt="" class="img"> 
                     <h3 class="img__title">Imobiliária Fortune</h3>
-                    <p class="img__description">E-commerce fictícia focada no ramo de roupas. <br><a href="https://fortune-imobiliaria.netlify.app/" class="img__btn">Acessar Site</a></p>
+                    <p class="img__description">Website focado no ramo imiliário com um lindo design e alta performance. <br><a href="https://fortune-imobiliaria.netlify.app/" class="img__btn">Acessar Site</a></p>
                 </div>
                 <div class="img__container">
                     <img src="assets/images/express-shop.webp" alt="" class="img"> 
