--- a/index.html
+++ b/index.html
@@ -96,17 +96,17 @@
                     <p class="img__description">Website focado no ramo imiliário com um lindo design e alta performance. <br><a href="https://fortune-imobiliaria.netlify.app/" class="img__btn">Acessar Site</a></p>
                 </div>
                 <div class="img__container">
-                    <img src="assets/images/express-shop.webp" alt="" class="img"> 
+                    <img src="assets/images/express.png" alt="" class="img"> 
                     <h3 class="img__title">Express Shop</h3>
                     <p class="img__description">E-commerce fictícia focada no ramo de roupas. <br><a href="https://expresshop.netlify.app/" class="img__btn">Acessar Site</a></p>
                 </div>
                 <div class="img__container">
-                    <img src="assets/images/heat-page.png" alt="" class="img">
+                    <img src="assets/images/heat.png" alt="" class="img">
                     <h3 class="img__title">Heat</h3>
                     <p class="img__description">Landing page fictícia de uma empresa focada em criação de Landing pages. <br><a href="https://heatpage.netlify.app/" class="img__btn">Acessar Site</a></p>
                 </div>  
                 <div class="img__container">
-                    <img src="assets/images/next-bar.webp" alt="" class="img"> 
+                    <img src="assets/images/nextbar.png" alt="" class="img"> 
                     <h3 class="img__title">Next Bar</h3>
                     <p class="img__description">Site com a temática bar, construido usando apenas Html, CSS & Figma. <br><a href="https://nextbar.netlify.app/" class="img__btn">Acessar Site</a></p>
                 </div>              
